@@ -1,3 +1,8 @@
+2005-02-24  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/20175
+	* g++.dg/warn/Wbraces2.C: New test.
+
 2005-02-21  Alexandre Oliva  <aoliva@redhat.com>
 
 	PR c++/20028
